# quiz-note

./: Cargo.toml  README.md  index.html  netlify.toml
.github/workflows/: deploy.yml
src/: main.rs
src/components/: home.rs  markdown.rs  mod.rs  sync_test.rs
src/components/auth/: login.rs  mod.rs
src/components/certificate/: detail.rs  form.rs  list.rs  mod.rs
src/components/data/: management.rs  mod.rs
src/components/question/: form.rs  list.rs  mod.rs
src/components/quiz/: mod.rs  quiz_page.rs
src/config/: mod.rs  supabase.rs
src/models/: mod.rs
src/routes/: mod.rs
src/services/: auth.rs  certificate_service.rs  data_service.rs  mod.rs  question_service.rs  supabase_client.rs  sync_service.rs
src/storage/: mod.rs
